# signature-capture

./: .gitignore  LICENSE  README.md  capture_wrapper.py  pyproject.toml  setup.py
java/: SignatureCaptureIntegrator.java
src/signature_capture/: __init__.py  signature_capture.py
tests/: test_signature_capture.py
